refactor!: add back support for versions as FHIR CodeSystems
Sorting, searching supported on certain fields (not all of them).
`_lastUpdated` now correctly set to the actual creation or lastUpdated
times depending on whether the FHIR CodeSystem is an actual CodeSystem
or a versioned CodeSystem.